# novel_knowledge_base

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  setup_venv.sh  start_gateway.sh  start_mcp_server.sh  test_mcp_server.sh
config/: example_config.yaml  wrong_fliter.txt
docs/: DATA_COMPLIANCE.md  START_GUIDE.md  high_concurrency_refactor_blueprint.md  interview_notes.md
docs/prompts/: cherry_studio_system_prompt.md
gateway/: __init__.py  config.py  main.py  models.py  routes.py  tier_router.py
gateway/providers/: aliyun.py  base.py  openai_like.py  volcengine.py  xunfei.py
novel_kb/: gateway_client.py  main.py
novel_kb/analyzers/: character_analyzer.py  embedding_builder.py  feature_extractor.py  plot_analyzer.py
novel_kb/auth/: __init__.py  database.py  user_manager.py
novel_kb/config/: config_manager.py  config_schema.py
novel_kb/knowledge_base/: __init__.py  cache.py  graph_store.py  models.py  repository.py  schemas.py  vector_store.py
novel_kb/llm/: __init__.py  aliyun_provider.py  factory.py  models.py  noop_provider.py  ollama_provider.py  openai_like_provider.py  provider.py  (+4 more)
scripts/: check_summary_consistency.py  convert_partial_to_progress.py  fix_epub_titles_from_content.py  fix_progress_titles_from_novel.py  restore_progress_from_json.py  run_mcp_stdio.sh  run_mcp_stdlib.py  test_xunfei_api.py
tests/: check_chapter.py  check_progress.py  final_test.py  test_analyzers.py  test_ingest_summary_status.py  test_llm_providers.py  test_mcp_basics.py  test_mcp_tools.py  test_parsers.py  test_providers.py  test_quick.py
(+28 files in other folders)
